Update Vercel configuration to refine routing and enhance URL handling

--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/(.*)\\.(html)$",
       "headers": [
         {
           "key": "Content-Type",
@@ -41,5 +41,7 @@
         }
       ]
     }
-  ]
+  ],
+  "trailingSlash": false,
+  "cleanUrls": true
 }
